# visual_gen

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-07-05-visual-engine-mvp.md  2026-07-09-cue-recall.md  2026-07-11-tail-dissolve.md
docs/superpowers/specs/: 2026-07-05-visual-engine-mvp-design.md  2026-07-09-cue-recall-design.md  2026-07-09-transitions-design.md  2026-07-10-transitions-framework-design.md  2026-07-11-tail-dissolve-design.md
examples/: README.md  config.yaml  show.yaml
scripts/: soak_switching.py
tests/: conftest.py  test_clock.py  test_commands.py  test_config.py  test_cues.py  test_engine.py  test_engine_failure.py  test_midi.py  test_player.py  test_show.py
visualgen/: app.py  clock.py  commands.py  config.py  cues.py  engine.py  instruction.py  player.py  render.py  show.py  window.py
visualgen/inputs/: midi.py
